Fixed some styles on tablet

--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -40,7 +40,7 @@
 // Media query for tablet
 @media screen and (min-width: 768px) {
     .homepage {
-        background-image: url('../Background-img/image-hero-coffeepress-tablet.jpg');
+        background-image: url('../Background-img/Tablet/image-hero-coffeepress-tablet.jpg');
 
         .homepage-container {
             align-items: flex-start;
