--- a/src/Components/Quality/Quality.scss
+++ b/src/Components/Quality/Quality.scss
@@ -63,6 +63,7 @@
 
             .quality__description {
                 margin-bottom: 6rem;
+                width: 75%;
             }
         }
     }
