--- a/src/Components/WhyUs/WhyUs.scss
+++ b/src/Components/WhyUs/WhyUs.scss
@@ -45,7 +45,7 @@
 
             .why-us__intro {
                 background: $light-dark-grey-blue;
-                padding-bottom: 0rem;
+                padding-bottom: 8rem;
 
                 .why-us__intro__title {
                     font-size: $thirtytwo;
